--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,14 @@
 [tool.poetry]
-name = "hot-cold-simulation"
+name = "hot_cold_simulation"
 version = "0.1.0"
 description = ""
 authors = ["JRickey <jack.rickey99@gmail.com>"]
+repository = "https://github.com/easierdata/Hot-Cold-Simulation"
 readme = "README.md"
+packages = [
+    { include = "hot_cold_simulation" },
+    { include = "tests"},
+]
 
 [tool.poetry.dependencies]
 python = "3.11.*"
@@ -15,6 +20,84 @@ numpy = "1.26.0"
 pandas = "2.1.1"
 requests = "^2.31.0"
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.9.1"
+mypy = "^1.6.0"
+isort = "^5.12.0"
+pre-commit = "^3.4.0"
+ruff = "^0.0.292"
+
+[tool.black]
+line-length = 88
+
+include = '''
+(
+    \.pyi?$
+| ^/tests/
+)
+'''
+
+exclude = '''
+/(
+	^\.git
+| ^\.mypy_cache
+| __pycache__
+| ^\.venv
+)/
+'''
+
+[tool.mypy]
+# Vist link to get more info on rules: https://mypy.readthedocs.io/en/stable/config_file.html
+exclude = [
+    '.venv',
+]
+
+pretty = "True"
+color_output = "True"
+show_column_numbers = "True"
+show_error_context = "True"
+ignore_missing_imports = "True"
+
+[tool.ruff]
+# The directories to consider/allow import relative to the project root directory.
+src = ["test"]
+
+# A list of rule codes or prefixes to enable
+# Vist link to get more info on rules: https://beta.ruff.rs/docs/rules/
+ignore = ["E501"]
+select = ["B","C","E","F","W","B9", "I", "Q", "ISC", "INP", "PTH", "FLY", "PERF", "RUF"]
+
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+# Note, if using pre-commit, ensure that ruff is placed before other formatting tool
+# hooks as the autofix behavior can output code changes that require reformatting.
+fix = true
+unfixable = []
+
+# Enumerate all fixed violations and the associated violation id.
+show-fixes = true
+
+# Common file and directory settings to include/exclude.
+include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
+exclude = [
+    "__pycache__",
+    "__pypackages__",
+    ".direnv",
+    ".eggs",
+    ".git-rewrite",
+    ".git",
+    ".mypy_cache",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".tox",
+    ".venv",
+    "build",
+    "dist",
+    "venv",
+]
+
+# Same as Black.
+line-length = 88
 
 [build-system]
 requires = ["poetry-core"]
