--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ mypy = "^1.6.0"
 isort = "^5.12.0"
 pre-commit = "^3.4.0"
 ruff = "^0.0.292"
+python-dotenv = "^1.0.0"
 
 [tool.black]
 line-length = 88
