--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,7 @@ authors = ["JRickey <jack.rickey99@gmail.com>"]
 repository = "https://github.com/easierdata/Hot-Cold-Simulation"
 readme = "README.md"
 packages = [
-    { include = "hot_cold_simulation" },
-    { include = "tests"},
+    { include = "hot_cold_simulation" }
 ]
 
 [tool.poetry.dependencies]
