--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ isort = "^5.12.0"
 pre-commit = "^3.4.0"
 ruff = "^0.0.292"
 python-dotenv = "^1.0.0"
+ipykernel = "^6.29.3"
 
 [tool.poetry.scripts]
 generate-config = "hot_cold_simulation.utils.generate_config:generate"
