--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "3.11.*"
+python = ">=3.12,<3.13"
 matplotlib = "^3.8.0"
 geopandas = "0.14.0"
 psycopg2 = "2.9.9"
@@ -18,6 +18,7 @@ plotly = "5.17.0"
 numpy = "1.26.0"
 pandas = "2.1.1"
 requests = "^2.31.0"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
